# batches_generation

./: .gitignore  README.md  utility.cpp  utility.h
data/: make_other.h  (+5 more)
testing/: CMakeLists.txt  gen_algo_test.cpp  graphic.py  pipeline.h  sim_annealing.cpp
testing/sim_annealing/: test.cpp
testing/sim_annealing/statistic/: Отжиг_кол-во_итераций=1000,вероятности=0.1,0.1,0.4,0.4-25-12-2023-23-18.txt  Отжиг_кол-во_итераций=10000,вероятности=0.05,0.05,0.45,0.45-25-12-2023-23-26.txt  Отжиг_кол-во_итераций=10000,вероятности=0.1,0.1,0.4,0.4,темпарутра=2-25-12-2023-23-29.txt  Отжиг_кол-во_итераций=10000,вероятности=0.1,0.1,0.4,0.4-25-12-2023-23-18.txt  Отжиг_кол-во_итераций=10000,вероятности=0.2,0.2,0.3,0.3-25-12-2023-23-22.txt
testing/sim_annealing_cm/: test.cpp
testing/sim_annealing_cm/statistic/: Отжигцм_кол-во_итераций=10000,вероятности=0.05,0.05,0.45,0.45,рад=10-25-12-2023-23-49.txt  Отжигцм_кол-во_итераций=10000,вероятности=0.05,0.05,0.45,0.45,рад=5-25-12-2023-23-53.txt  Отжигцм_кол-во_итераций=10000,вероятности=0.1,0.1,0.4,0.4,рад=10-25-12-2023-23-57.txt  Отжигцм_кол-во_итераций=10000,вероятности=0.1,0.1,0.4,0.4,рад=5-26-12-2023-00-00.txt  Отжигцм_кол-во_итераций=10000,вероятности=0.2,0.2,0.3,0.3,рад=10-25-12-2023-23-41.txt  Отжигцм_кол-во_итераций=10000,вероятности=0.2,0.2,0.3,0.3,рад=5-25-12-2023-23-45.txt
testing/sim_annealing_unit/: test.cpp
testing/sim_annealing_unit/statistic/: Отжиг_удел_кол-во_итераций=1000,вероятности=0.1,0.1,0.4,0.4-26-12-2023-02-16.txt  Отжиг_удел_кол-во_итераций=10000,вероятности=0.1,0.1,0.4,0.4,темпарутра=10-26-12-2023-02-39.txt  (+8 more)
(+21 files in other folders)
